Closed Bug 1190148 Opened 9 years ago Closed 9 years ago

Fix warnings in toolkit/crashreporter/client and mark as FAIL_ON_WARNINGS

Categories

(Toolkit :: Crash Reporting, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox43 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

toolkit/crashreporter/client/crashreporter_gtk_common.cpp:416:5: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings] toolkit/crashreporter/client/crashreporter_osx.mm:282:43: warning: semicolon before method body is ignored [-Wsemicolon-before-method-body] Also remove unnecessary NULL checks before calling free().
Attachment #8642139 - Flags: review?(ted)
Attachment #8642139 - Flags: review?(ted) → review+
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: