Bug 1190148 - Fix warnings in toolkit/crashreporter/client and mark as FAIL_ON_WARNINGS. r=ted